choosable Language (DE or EN), create directory and config file on pc, read/and write to config file and almost reset config file

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -1,2 +1,11 @@
+versionTxt = Version:
 
+# close game PopUp
+closeGame = Spiel schließen
+questionCloseGame = Das Spiel wirklich schließen?
+yes = Ja
+no = Nein
 
+# reset settings PopUp
+resetSettingsTitle = Einstellungen zurücksetzen
+resetSettingsContent = Einstellungen zu Default zurücksetzen
