--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -1,2 +1,11 @@
+versionTxt = version:
 
+# close game PopUp
+closeGame = Close Game
+questionCloseGame = Do you really want to close the game?
+yes = Yes
+no = No
 
+# reset settings PopUp
+resetSettingsTitle = Reset Settings
+resetSettingsContent = Reset settings to default
