properly language selection (is also fix for issue #18), resetting settings

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -1,11 +1,14 @@
 versionTxt = Version:
 
 # close game PopUp
-closeGame = Spiel schließen
-questionCloseGame = Das Spiel wirklich schließen?
+closeGameTitle = Spiel schließen
+closeGameHeader = Das Spiel wirklich schließen?
+closeGameContent = Spiel schließen & Desktop gehen
 yes = Ja
 no = Nein
 
 # reset settings PopUp
+resetSettingsHeader = Willst du wirklich deine Einstellungen zurücksetzen?
 resetSettingsTitle = Einstellungen zurücksetzen
-resetSettingsContent = Einstellungen zu Default zurücksetzen
+resetSettingsContent = Dies kann nicht rückgängig gemacht werden!
+settingInfoTxt = Einstellungen wurden zurückgesetzt
