--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -1,11 +1,14 @@
 versionTxt = version:
 
 # close game PopUp
-closeGame = Close Game
-questionCloseGame = Do you really want to close the game?
+closeGameTitle = Close game
+closeGameHeader = Do you really want to close the game?
+closeGameContent = Close & return to Desktop
 yes = Yes
 no = No
 
 # reset settings PopUp
+resetSettingsHeader = Do you really want to reset your settings?
 resetSettingsTitle = Reset Settings
-resetSettingsContent = Reset settings to default
+resetSettingsContent = This step can't be undone!
+settingInfoTxt = Settings were reset
