Basics to create account (local and online), therefore connect to a database, check if username alr exists...

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -12,3 +12,31 @@ resetSettingsHeader = Willst du wirklich deine Einstellungen zurücksetzen?
 resetSettingsTitle = Einstellungen zurücksetzen
 resetSettingsContent = Dies kann nicht rückgängig gemacht werden!
 settingInfoTxt = Einstellungen wurden zurückgesetzt
+
+# password empty PopUp
+passwordEmptyTitle = Passwort überprüfen
+passwordEmptyHeader = Es wurde kein Passwort angegeben
+
+# username empty PopUp
+usernameEmptyTitle = Benutzername überprüfen
+usernameEmptyHeader = Es wurde kein Benutzername angegeben
+
+checkAndTryAgain = Bitte überprüfen & erneut probieren!
+
+# online account created PopUp
+accountCreatedTitle = Online Account erstellt
+accountCreatedHeader = Online Account wurde erfolgreich erstellt
+accountCreatedContent = Benutzername: 
+
+# account not created PopUp
+accountNotCreatedTitle = Online Account nicht erstellt
+accountNotCreatedHeader = Online Account konnte nicht erstellt werden, mit lokalem Account fortfahren?
+accountNotCreatedContent = Überprüfe gegebenenfalls deine Internetverbindung!
+accountNotCreatedTryAgain = Nochmal probieren
+accountNotCreatedCreateLocalAcc = Lokalen Account erstellen
+
+# local account created PopUp
+localAccCreatedTitle = Lokaler Account erstellt
+localAccCreatedHeader = Lokaler Account wurde erstellt
+
+cancel = Abbrechen
