--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -12,3 +12,31 @@ resetSettingsHeader = Do you really want to reset your settings?
 resetSettingsTitle = Reset Settings
 resetSettingsContent = This step can't be undone!
 settingInfoTxt = Settings were reset
+
+# password empty PopUp
+passwordEmptyTitle = Check password
+passwordEmptyHeader = No password entered
+
+# username empty PopUp
+usernameEmptyTitle = Check username
+usernameEmptyHeader = No username entered
+
+checkAndTryAgain = Please check & try again!
+
+# online account created PopUp
+accountCreatedTitle = "Online Account created"
+accountCreatedHeader = "Online Account was created successfully"
+accountCreatedContent = "Username: "
+
+# account not created PopUp
+accountNotCreatedTitle = Online Account not created
+accountNotCreatedHeader = Online Account couldn't be created, create local Account instead?
+accountNotCreatedContent = Maybe check your internet connection!
+accountNotCreatedTryAgain = I will try again
+accountNotCreatedCreateLocalAcc = Create Local Account
+
+# local account created PopUp
+localAccCreatedTitle = Local Account created
+localAccCreatedHeader = Local Account was created
+
+cancel = Cancel
