Online accounts not possible anymore, starting with local accounts

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -39,4 +39,17 @@ accountNotCreatedCreateLocalAcc = Lokalen Account erstellen
 localAccCreatedTitle = Lokaler Account erstellt
 localAccCreatedHeader = Lokaler Account wurde erstellt
 
+# username already exists PopUp
+usrAlrExistsTitle = Benutzername existiert bereits
+usrAlrExistsHeader = Der ausgewählte Benutzername existiert bereits
+usrAlrExistsContent = Benutze einen anderen Benutzername
+
+onlineAccNotImplementedTitle = Keine Online Account Registrierung möglich
+onlineAccNotImplementedHeader = Erstelle einen lokalen Account
+onlineAccNotImplementedContent = da die Online Account Registrierung noch nicht implementiert wurde
+
 cancel = Abbrechen
+
+
+# Game Stage
+score = Punkte: 
