--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -39,4 +39,18 @@ accountNotCreatedCreateLocalAcc = Create Local Account
 localAccCreatedTitle = Local Account created
 localAccCreatedHeader = Local Account was created
 
+# username already exists PopUp
+usrAlrExistsTitle = Username already exists
+usrAlrExistsHeader = The username you chosen already exists
+usrAlrExistsContent = Choose another username
+
+# online account not implemented yet PopUp
+onlineAccNotImplementedTitle = No Online Account Registration available
+onlineAccNotImplementedHeader = Create a Local Account
+onlineAccNotImplementedContent = due to Online Account Registration not implemented yet
+
 cancel = Cancel
+
+
+# Game Stage
+score = Score: 
