Account/AccountGUI, Register local account, AlertBuilder, UserData properties

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -42,16 +42,26 @@ localAccCreatedHeader = Lokaler Account wurde erstellt
 # username already exists PopUp
 usrAlrExistsTitle = Benutzername existiert bereits
 usrAlrExistsHeader = Der ausgewählte Benutzername existiert bereits
-usrAlrExistsContent = Benutze einen anderen Benutzername
+usrAlrExistsContent = Benutze einen anderen Benutzername als: 
 
 onlineAccNotImplementedTitle = Keine Online Account Registrierung möglich
 onlineAccNotImplementedHeader = Erstelle einen lokalen Account
 onlineAccNotImplementedContent = da die Online Account Registrierung noch nicht implementiert wurde
 
+# user doesnt exist to login
+userDoesntExistTitle = Benutzer existiert nicht
+userDoesntExistHeader = Konnte dich nicht mit '
+userDoesntExistHeader2 = ' anmelden, da dieser Account nicht existiert
+userDoesntExistContent = Überprüfe deine Eingaben oder registriere einen neuen Account
+
 cancel = Abbrechen
 
+# username is not valid
+notValidUserNameTitle = Kein valider Benutzername
+notValidUserNameHeader = Der eingegebene Benutzername stimmt nicht mit den Vorgaben überein
+notValidUserNameContent = Er muss 3-15 Buchstaben haben und darf aus keinen Zahlen bestehen
 
 # Game Stage
 score = Punkte: 
 playTime = Spielzeit: 
-nextBLock = nächster BLock
+nextBlock = nächster Block
