--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -42,17 +42,28 @@ localAccCreatedHeader = Local Account was created
 # username already exists PopUp
 usrAlrExistsTitle = Username already exists
 usrAlrExistsHeader = The username you chosen already exists
-usrAlrExistsContent = Choose another username
+usrAlrExistsContent = Choose another username than: 
 
 # online account not implemented yet PopUp
 onlineAccNotImplementedTitle = No Online Account Registration available
 onlineAccNotImplementedHeader = Create a Local Account
 onlineAccNotImplementedContent = due to Online Account Registration not implemented yet
 
+# user doesnt exist to login
+userDoesntExistTitle = User doesn't exist
+userDoesntExistHeader = Couldn't log you in with '
+userDoesntExistHeader2 = ' because this user doesn't exist
+userDoesntExistContent = Check your inputs or register a new account
+
 cancel = Cancel
+
+# username is not valid
+notValidUserNameTitle = Not a valid username
+notValidUserNameHeader = The entered username doesn't meet the Guidelines
+notValidUserNameContent = It must be 3-15 letters, no numbers
 
 
 # Game Stage
 score = Score: 
 playTime = Playtime : 
-nextBLock = next BLock
+nextBlock = next Block
