changes in language files for account/databse alerts

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -33,7 +33,8 @@ accountNotCreatedTitle = Online Account nicht erstellt
 accountNotCreatedHeader = Online Account konnte nicht erstellt werden, mit lokalem Account fortfahren?
 accountNotCreatedContent = Überprüfe gegebenenfalls deine Internetverbindung!
 accountNotCreatedTryAgain = Nochmal probieren
-accountNotCreatedCreateLocalAcc = Lokalen Account erstellen
+
+createLocalAccount = Lokalen Account erstellen
 
 # local account created PopUp
 localAccCreatedTitle = Lokaler Account erstellt
