--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -33,7 +33,8 @@ accountNotCreatedTitle = Online Account not created
 accountNotCreatedHeader = Online Account couldn't be created, create local Account instead?
 accountNotCreatedContent = Maybe check your internet connection!
 accountNotCreatedTryAgain = I will try again
-accountNotCreatedCreateLocalAcc = Create Local Account
+
+createLocalAccount = Create Local Account
 
 # local account created PopUp
 localAccCreatedTitle = Local Account created
