--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -66,3 +66,4 @@ notValidUserNameContent = Er muss 3-15 Buchstaben haben und darf aus keinen Zahl
 score = Punkte: 
 playTime = Spielzeit: 
 nextBlock = nächster Block
+lines = Reihen:
