--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -68,3 +68,4 @@ notValidUserNameContent = It must be 3-15 letters, no numbers
 score = Score: 
 playTime = Playtime : 
 nextBlock = next Block
+lines = Lines:
