DataBase connection, create local and online user, UserData load, store, search, Comments, ...

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -36,6 +36,8 @@ accountNotCreatedTryAgain = Nochmal probieren
 
 createLocalAccount = Lokalen Account erstellen
 
+#
+
 # local account created PopUp
 localAccCreatedTitle = Lokaler Account erstellt
 localAccCreatedHeader = Lokaler Account wurde erstellt
@@ -45,14 +47,10 @@ usrAlrExistsTitle = Benutzername existiert bereits
 usrAlrExistsHeader = Der ausgewählte Benutzername existiert bereits
 usrAlrExistsContent = Benutze einen anderen Benutzername als: 
 
-onlineAccNotImplementedTitle = Keine Online Account Registrierung möglich
-onlineAccNotImplementedHeader = Erstelle einen lokalen Account
-onlineAccNotImplementedContent = da die Online Account Registrierung noch nicht implementiert wurde
-
 # user doesnt exist to login
 userDoesntExistTitle = Benutzer existiert nicht
 userDoesntExistHeader = Konnte dich nicht mit '
-userDoesntExistHeader2 = ' anmelden, da dieser Account nicht existiert
+userDoesntExistHeader2 = ' anmelden, da dieser lokaler Account nicht existiert
 userDoesntExistContent = Überprüfe deine Eingaben oder registriere einen neuen Account
 
 cancel = Abbrechen
@@ -61,6 +59,44 @@ cancel = Abbrechen
 notValidUserNameTitle = Kein valider Benutzername
 notValidUserNameHeader = Der eingegebene Benutzername stimmt nicht mit den Vorgaben überein
 notValidUserNameContent = Er muss 3-15 Buchstaben haben und darf aus keinen Zahlen bestehen
+
+# false Password PopUp
+falsePasswTitle = Falsches Passwort
+falsePasswHeader = Passwort stimmt nicht überein
+
+# couldnt't log into Account PopUp
+couldntLogInTitle = Anmeldung fehlgeschlagen
+couldntLogInHeader = Konnte dich nicht anmelden
+couldntLogInContent = Vielleicht ist die Datenbank nicht erreichbar, überprüfe gegebenenfalls deine Verbindung
+
+# false credentials PopUp
+falseCredTitle = Falsche Anmeldedaten
+falseCredHeader = Benutzername und/oder Password stimmt nicht überein
+falseCredContent = Möglicherweise existiert dieser Benutzer überhaupt nicht
+
+# create local or online Account PopUp
+localOrOnlineTitle = Online Account oder lokaler Account
+localOrOnlineHeader = Möchtest du einen online oder lokalen Account erstellen?
+localOrOnlineContent = Lokale Daten können später nicht hochgeladen werden!
+createOnlineAccount = Online Account erstellen
+
+# login local or online PopUp
+loginLclOrOnlineTitle = Login
+loginLclOrOnlineHeader = Mit online oder lokalem Account anmelden?
+loginLclOrOnlineContent = Anmelden mit
+onlineAcc = Online Account
+localAcc = Lokalem Account
+
+# logged in PopUp
+loggedInTitle = Erfolgreich angemeldet
+loggedInHeader = Du wurdest erfolgreich angemeldet
+loggedInContent = Benutzername:
+
+# error Alert
+error = Fehler
+notDefinedErrorHeader = Ein undefinierter Fehler ist in ' 
+notDefinedErrorHeader2 = ' aufgetreten
+notDefinedErrorContent = Versuche es erneut oder kontaktiere die Entwickler
 
 # Game Stage
 score = Punkte: 
