--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -53,7 +53,7 @@ onlineAccNotImplementedContent = due to Online Account Registration not implemen
 # user doesnt exist to login
 userDoesntExistTitle = User doesn't exist
 userDoesntExistHeader = Couldn't log you in with '
-userDoesntExistHeader2 = ' because this user doesn't exist
+userDoesntExistHeader2 = ' because this local user doesn't exist
 userDoesntExistContent = Check your inputs or register a new account
 
 cancel = Cancel
@@ -63,6 +63,43 @@ notValidUserNameTitle = Not a valid username
 notValidUserNameHeader = The entered username doesn't meet the Guidelines
 notValidUserNameContent = It must be 3-15 letters, no numbers
 
+# false Password PopUp
+falsePasswTitle = False password
+falsePasswHeader = Passwords don't match
+
+# couldnt't log into Account
+couldntLogInTitle = Login failed
+couldntLogInHeader = Couldn't log you in to your online account
+couldntLogInContent = Maybe the database isn't reachable, check your connection
+
+# false credentials PopUp
+falseCredTitle = False credentials
+falseCredHeader = Username and/or password don't match
+falseCredContent = Eventually the user doesn't exist at all
+
+# create local or online Account PopUp
+localOrOnlineTitle = Online account or local account
+localOrOnlineHeader = Do you want to create an online or local Account
+localOrOnlineContent = Local account statistics can't be uploaded later!
+createOnlineAccount = Create online account
+
+# login local or online PopUp
+loginLclOrOnlineTitle = Login
+loginLclOrOnlineHeader = Do you want to log in with a local or online account?
+loginLclOrOnlineContent = Log in with
+onlineAcc = Online account
+localAcc = Local account
+
+# logged in PopUp
+loggedInTitle = Login successful
+loggedInHeader = You were logged in successfully
+loggedInContent = Username:
+
+# error Alert
+error = Error
+notDefinedErrorHeader = An undefined error occurred in '
+notDefinedErrorHeader2 = '
+notDefinedErrorContent = Try again or contact the developers
 
 # Game Stage
 score = Score: 
