Fixes in Account, DataBase, AccountGUI; new Logo, ...

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -36,8 +36,6 @@ accountNotCreatedTryAgain = Nochmal probieren
 
 createLocalAccount = Lokalen Account erstellen
 
-#
-
 # local account created PopUp
 localAccCreatedTitle = Lokaler Account erstellt
 localAccCreatedHeader = Lokaler Account wurde erstellt
@@ -71,7 +69,7 @@ couldntLogInContent = Vielleicht ist die Datenbank nicht erreichbar, überprüfe g
 
 # false credentials PopUp
 falseCredTitle = Falsche Anmeldedaten
-falseCredHeader = Benutzername und/oder Password stimmt nicht überein
+falseCredHeader = Benutzername und/oder Passwort stimmt nicht überein
 falseCredContent = Möglicherweise existiert dieser Benutzer überhaupt nicht
 
 # create local or online Account PopUp
@@ -83,7 +81,7 @@ createOnlineAccount = Online Account erstellen
 # login local or online PopUp
 loginLclOrOnlineTitle = Login
 loginLclOrOnlineHeader = Mit online oder lokalem Account anmelden?
-loginLclOrOnlineContent = Anmelden mit
+loginLclOrOnlineContent = Anmelden mit:
 onlineAcc = Online Account
 localAcc = Lokalem Account
 
@@ -94,9 +92,14 @@ loggedInContent = Benutzername:
 
 # error Alert
 error = Fehler
-notDefinedErrorHeader = Ein undefinierter Fehler ist in ' 
+notDefinedErrorHeader = Ein undefinierter Fehler ist in '
 notDefinedErrorHeader2 = ' aufgetreten
 notDefinedErrorContent = Versuche es erneut oder kontaktiere die Entwickler
+
+# notImplemented PopUp
+notImplementedTitle = Nicht verfügbar
+notImplementedHeader = Diese Funktion ist noch nicht vorhanden!
+notImplementedContent = Versuche es zu einem anderen Zeitpunkt wieder.
 
 # Game Stage
 score = Punkte: 
