--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -43,12 +43,7 @@ localAccCreatedHeader = Local Account was created
 # username already exists PopUp
 usrAlrExistsTitle = Username already exists
 usrAlrExistsHeader = The username you chosen already exists
-usrAlrExistsContent = Choose another username than: 
-
-# online account not implemented yet PopUp
-onlineAccNotImplementedTitle = No Online Account Registration available
-onlineAccNotImplementedHeader = Create a Local Account
-onlineAccNotImplementedContent = due to Online Account Registration not implemented yet
+usrAlrExistsContent = Choose another username than:
 
 # user doesnt exist to login
 userDoesntExistTitle = User doesn't exist
@@ -86,7 +81,7 @@ createOnlineAccount = Create online account
 # login local or online PopUp
 loginLclOrOnlineTitle = Login
 loginLclOrOnlineHeader = Do you want to log in with a local or online account?
-loginLclOrOnlineContent = Log in with
+loginLclOrOnlineContent = Log in with: 
 onlineAcc = Online account
 localAcc = Local account
 
@@ -100,6 +95,11 @@ error = Error
 notDefinedErrorHeader = An undefined error occurred in '
 notDefinedErrorHeader2 = '
 notDefinedErrorContent = Try again or contact the developers
+
+# notImplemented PopUp
+notImplementedTitle = Not implemented yet
+notImplementedHeader = This feature isn't implemented yet!
+notImplementedContent = Try again at another time.
 
 # Game Stage
 score = Score: 
