Play background music, change volume (#17) ; Alert if nobody is logged in and you want to play, Display logged in user on ChooseModeGUI

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -13,6 +13,11 @@ resetSettingsTitle = Einstellungen zurücksetzen
 resetSettingsContent = Dies kann nicht rückgängig gemacht werden!
 settingInfoTxt = Einstellungen wurden zurückgesetzt
 
+# reset controls PopUp
+resetControlsTitle = Steuerung zurücksetzen
+resetControlsHeader = Willst du wirklich deine Steuerung zurücksetzen?
+resetControlsContent = Dies kann nicht rückgängig gemacht werden!
+
 # password empty PopUp
 passwordEmptyTitle = Passwort überprüfen
 passwordEmptyHeader = Es wurde kein Passwort angegeben
@@ -62,7 +67,7 @@ notValidUserNameContent = Er muss 3-15 Buchstaben haben und darf aus keinen Zahl
 falsePasswTitle = Falsches Passwort
 falsePasswHeader = Passwort stimmt nicht überein
 
-# couldnt't log into Account PopUp
+# couldn't log into Account PopUp
 couldntLogInTitle = Anmeldung fehlgeschlagen
 couldntLogInHeader = Konnte dich nicht anmelden
 couldntLogInContent = Vielleicht ist die Datenbank nicht erreichbar, überprüfe gegebenenfalls deine Verbindung
@@ -100,6 +105,16 @@ notDefinedErrorContent = Versuche es erneut oder kontaktiere die Entwickler
 notImplementedTitle = Nicht verfügbar
 notImplementedHeader = Diese Funktion ist noch nicht vorhanden!
 notImplementedContent = Versuche es zu einem anderen Zeitpunkt wieder.
+
+# nobody is logged in PopUp
+nobodyLoggedInTitle = Nicht angemeldet
+nobodyLoggedInHeader = Du bist mit keinem Account angemeldet
+nobodyLoggedInContent = Bitte melde dich mit einem an oder erstelle einen auf der Account Seite
+
+# not same version in config and game PopUp
+notSameVersionTitle = Andere Version
+notSameVersionHeader = Dein Config File ist nicht up-to-date. Lösche es daher bitte und starte das Spiel neu.
+notSameVersionContent = Das File ist hier zu finden: 
 
 # Game Stage
 score = Punkte: 
