--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -13,6 +13,11 @@ resetSettingsTitle = Reset Settings
 resetSettingsContent = This step can't be undone!
 settingInfoTxt = Settings were reset
 
+# reset controls PopUp
+resetControlsTitle = Reset controls
+resetControlsHeader = Do you really want to reset your controls?
+resetControlsContent = This step can't be undone!
+
 # password empty PopUp
 passwordEmptyTitle = Check password
 passwordEmptyHeader = No password entered
@@ -100,6 +105,16 @@ notDefinedErrorContent = Try again or contact the developers
 notImplementedTitle = Not implemented yet
 notImplementedHeader = This feature isn't implemented yet!
 notImplementedContent = Try again at another time.
+
+# nobody is logged in PopUp
+nobodyLoggedInTitle = Not logged in
+nobodyLoggedInHeader = You aren't logged in with any account
+nobodyLoggedInContent = Please login or create an account at the account page
+
+# not same version in config and game PopUp
+notSameVersionTitle = Other Version
+notSameVersionHeader = Your config file isn't up-to-date. Please delete it and restart the game.
+notSameVersionContent = The file is found here:
 
 # Game Stage
 score = Score: 
