DataBase calls over API instead through direct SQL statements; Version check; start of LeaderboardGUI; small fixes

--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -29,9 +29,9 @@ usernameEmptyHeader = No username entered
 checkAndTryAgain = Please check & try again!
 
 # online account created PopUp
-accountCreatedTitle = "Online Account created"
-accountCreatedHeader = "Online Account was created successfully"
-accountCreatedContent = "Username: "
+accountCreatedTitle = Online Account created
+accountCreatedHeader = Online Account was created successfully
+accountCreatedContent = Username: 
 
 # account not created PopUp
 accountNotCreatedTitle = Online Account not created
@@ -122,3 +122,5 @@ playTime = Playtime :
 nextBlock = next Block
 lines = Lines:
 timeLeft = Time left: 
+
+noDataToShow = No data to display
