Bugfixes in GameOverGUI and PauseGUI; splashscreen on start

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -116,6 +116,13 @@ notSameVersionTitle = Andere Version
 notSameVersionHeader = Dein Config File ist nicht up-to-date. Lösche es daher bitte und starte das Spiel neu.
 notSameVersionContent = Das File ist hier zu finden: 
 
+# loading splashscreen text
+loadingSettings = Einstellungen geladen
+loadingAccountOnline = Versuche online Login...
+loadingAccountLocal = Versuche lokalen Login...
+loadingMusic = Fange an Musik zu spielen...
+loadingMenuStart = Starte Menü...
+
 # Game Stage
 score = Punkte: 
 playTime = Spielzeit: 
