--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -116,6 +116,13 @@ notSameVersionTitle = Other Version
 notSameVersionHeader = Your config file isn't up-to-date. Please delete it and restart the game.
 notSameVersionContent = The file is found here:
 
+# loading splashscreen text
+loadingSettings = Loaded settings
+loadingAccountOnline = Trying online login...
+loadingAccountLocal = Trying local login...
+loadingMusic = Starting to play music...
+loadingMenuStart = Starting menu...
+
 # Game Stage
 score = Score: 
 playTime = Playtime : 
