prework for Leaderboard; now Alert if new major Version because new config&controls were created; keymapping (#8); fixes

--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -111,15 +111,25 @@ nobodyLoggedInTitle = Not logged in
 nobodyLoggedInHeader = You aren't logged in with any account
 nobodyLoggedInContent = Please login or create an account at the account page
 
-# not same version in config and game PopUp
+# not same version in config and game PopUp (minor update)
 notSameVersionTitle = Other Version
-notSameVersionHeader = Your config file isn't up-to-date. Please delete it and restart the game.
-notSameVersionContent = The file is found here:
+notSameVersionHeader = Your Config file doesn't contain the same game version. You maybe want to delete it together with the controls file.
+
+# major update
+majorUpdateTitle = JavaTetris | Major Update
+majorUpdateHeader = Major Update | 
+majorUpdateContent = Set new Settings & Controls or look here: 
+majorUpdateContent2 = to have the same settings as before
+
+# dev change update
+devChangeTitle = JavaTetris | Major Development Change
+
+dontShowAgain = Don't show again for this minor version
 
 # loading splashscreen text
 loadingSettings = Loaded settings
-loadingAccountOnline = Trying online login...
-loadingAccountLocal = Trying local login...
+loadingAccountOnline = Trying online login with ' 
+loadingAccountLocal = Trying local login with ' 
 loadingMusic = Starting to play music...
 loadingMenuStart = Starting menu...
 
@@ -131,3 +141,14 @@ lines = Lines:
 timeLeft = Time left: 
 
 noDataToShow = No data to display
+
+drop = Drop
+hardDrop = Hard Drop
+moveLeft = Move left
+moveRight = Move right
+rotate = Rotate
+pause = Pause/Play
+hold = Hold
+
+keyNotSupported = This key isn't supported!
+keyAlrExists = You already use this key!
