--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -53,7 +53,7 @@ usrAlrExistsContent = Benutze einen anderen Benutzername als:
 # user doesnt exist to login
 userDoesntExistTitle = Benutzer existiert nicht
 userDoesntExistHeader = Konnte dich nicht mit '
-userDoesntExistHeader2 = ' anmelden, da dieser lokaler Account nicht existiert
+userDoesntExistHeader2 = ' anmelden, da dieser lokale Account nicht existiert
 userDoesntExistContent = Überprüfe deine Eingaben oder registriere einen neuen Account
 
 cancel = Abbrechen
@@ -111,15 +111,19 @@ nobodyLoggedInTitle = Nicht angemeldet
 nobodyLoggedInHeader = Du bist mit keinem Account angemeldet
 nobodyLoggedInContent = Bitte melde dich mit einem an oder erstelle einen auf der Account Seite
 
-# not same version in config and game PopUp
-notSameVersionTitle = Andere Version
-notSameVersionHeader = Dein Config File ist nicht up-to-date. Lösche es daher bitte und starte das Spiel neu.
-notSameVersionContent = Das File ist hier zu finden: 
+# major update
+majorUpdateTitle = JavaTetris | Major Update
+majorUpdateHeader = Major Update | 
+majorUpdateContent = Einstellungen & Controls neu setzten oder hier nachschauen: 
+majorUpdateContent2 = um die selben Einstellungen wie vorher zu haben
+
+dontShowAgain = Nicht mehr für diese Version zeigen
+
 
 # loading splashscreen text
 loadingSettings = Einstellungen geladen
-loadingAccountOnline = Versuche online Login...
-loadingAccountLocal = Versuche lokalen Login...
+loadingAccountOnline = Versuche online Login mit '
+loadingAccountLocal = Versuche lokalen Login mit '
 loadingMusic = Fange an Musik zu spielen...
 loadingMenuStart = Starte Menü...
 
@@ -131,3 +135,14 @@ lines = Reihen:
 timeLeft = Zeit übrig: 
 
 noDataToShow = No data to show
+
+drop = Beschleunigen
+hardDrop = Fallen lassen
+moveLeft = Nach links
+moveRight = Nach rechts
+rotate = Drehen
+pause = Pause/Play
+hold = Hold
+
+keyNotSupported = Diese Taste wird nicht unterstützt!
+keyAlrExists = Du verwendest diese Taste bereits!
