--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -146,3 +146,4 @@ hold = Hold
 
 keyNotSupported = Diese Taste wird nicht unterstützt!
 keyAlrExists = Du verwendest diese Taste bereits!
+clickHereToSetNewKey = Klicke hier um eine neue Taste zu setzen
