--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -152,3 +152,4 @@ hold = Hold
 
 keyNotSupported = This key isn't supported!
 keyAlrExists = You already use this key!
+clickHereToSetNewKey = Click here to set new key
