--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -130,7 +130,7 @@ loadingMenuStart = Starte Menü...
 # Game Stage
 score = Punkte: 
 playTime = Spielzeit: 
-nextBlock = nächster Block
+nextBlock = Nächster Block
 lines = Reihen:
 timeLeft = Zeit übrig: 
 
