--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -128,15 +128,15 @@ dontShowAgain = Don't show again for this minor version
 
 # loading splashscreen text
 loadingSettings = Loaded settings
-loadingAccountOnline = Trying online login with ' 
-loadingAccountLocal = Trying local login with ' 
+loadingAccountOnline = Trying online login with '
+loadingAccountLocal = Trying local login with '
 loadingMusic = Starting to play music...
 loadingMenuStart = Starting menu...
 
 # Game Stage
 score = Score: 
 playTime = Playtime : 
-nextBlock = next Block
+nextBlock = Next Block
 lines = Lines:
 timeLeft = Time left: 
 
