--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -135,6 +135,7 @@ lines = Reihen:
 timeLeft = Zeit übrig: 
 
 noDataToShow = No data to show
+loadingData = Lade...
 
 drop = Beschleunigen
 hardDrop = Fallen lassen
