--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -47,7 +47,7 @@ localAccCreatedHeader = Local Account was created
 
 # username already exists PopUp
 usrAlrExistsTitle = Username already exists
-usrAlrExistsHeader = The username you chosen already exists
+usrAlrExistsHeader = The username you have chosen already exists
 usrAlrExistsContent = Choose another username than:
 
 # user doesnt exist to login
@@ -141,6 +141,7 @@ lines = Lines:
 timeLeft = Time left: 
 
 noDataToShow = No data to display
+loadingData = Loading...
 
 drop = Drop
 hardDrop = Hard Drop
