v.1.3.0 DiscordRPC, Local Leaderboard, Fixes

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -117,8 +117,6 @@ majorUpdateHeader = Major Update |
 majorUpdateContent = Einstellungen & Controls neu setzten oder hier nachschauen: 
 majorUpdateContent2 = um die selben Einstellungen wie vorher zu haben
 
-dontShowAgain = Nicht mehr für diese Version zeigen
-
 
 # loading splashscreen text
 loadingSettings = Einstellungen geladen
@@ -134,7 +132,7 @@ nextBlock = Nächster Block
 lines = Reihen:
 timeLeft = Zeit übrig: 
 
-noDataToShow = No data to show
+noDataToShow = Keine Daten zum Anzeigen
 loadingData = Lade...
 
 drop = Beschleunigen
@@ -148,3 +146,22 @@ hold = Hold
 keyNotSupported = Diese Taste wird nicht unterstützt!
 keyAlrExists = Du verwendest diese Taste bereits!
 clickHereToSetNewKey = Klicke hier um eine neue Taste zu setzen
+
+# discord rich presence
+dcStarting = Startet JavaTetris
+dcInMenu = Im Menü
+dcGameOver = Game Over
+dcLookingLeaderboards = Schaut auf die Leaderboards
+dcChoosingMode = Wählt einen Modus
+dcPlayingEndless = Spielt Modus: Unendlich
+dcPlayingAgainstTime = Spielt Modus: Gegen die Zeit
+dcPlayingTutorial = Spielt Modus: Tutorial
+dcPlayingClassic = Spielt Modus: Classic
+dcPause = Pausiert
+dcLookingSettings = Klickt durch die Einstellungen
+dcLookingAbout = Schaut sich About an
+dcSettingControls = Setzt Steuerung
+dcPlayedClassic = Spielte Modus: Classic
+dcPlayedEndless = Spielte Modus: Infinity
+dcPlayedAgainstTime = Spielte Modus: Against Time
+dcViewingAccountPage = Betrachtet Account Seite
