--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -111,20 +111,11 @@ nobodyLoggedInTitle = Not logged in
 nobodyLoggedInHeader = You aren't logged in with any account
 nobodyLoggedInContent = Please login or create an account at the account page
 
-# not same version in config and game PopUp (minor update)
-notSameVersionTitle = Other Version
-notSameVersionHeader = Your Config file doesn't contain the same game version. You maybe want to delete it together with the controls file.
-
 # major update
 majorUpdateTitle = JavaTetris | Major Update
 majorUpdateHeader = Major Update | 
 majorUpdateContent = Set new Settings & Controls or look here: 
 majorUpdateContent2 = to have the same settings as before
-
-# dev change update
-devChangeTitle = JavaTetris | Major Development Change
-
-dontShowAgain = Don't show again for this minor version
 
 # loading splashscreen text
 loadingSettings = Loaded settings
@@ -154,3 +145,22 @@ hold = Hold
 keyNotSupported = This key isn't supported!
 keyAlrExists = You already use this key!
 clickHereToSetNewKey = Click here to set new key
+
+# discord rich presence
+dcStarting = Starting JavaTetris
+dcInMenu = In menus
+dcGameOver = Game Over
+dcLookingLeaderboards = Looking at the leaderboards
+dcChoosingMode = Choosing a mode
+dcPlayingEndless = Playing Mode: Infinity
+dcPlayingAgainstTime = Playing Mode: Against Time
+dcPlayingTutorial = Playing Mode: Tutorial
+dcPlayingClassic = Playing Mode: Classic
+dcPause = Paused
+dcLookingSettings = Clicking through Settings
+dcLookingAbout = Looking at About
+dcSettingControls = Setting controls
+dcPlayedClassic = Played Mode: Classic
+dcPlayedEndless = Played Mode: Infinity
+dcPlayedAgainstTime = Played Mode: Against Time
+dcViewingAccountPage = Viewing Account page
