v.1.4.0 Fixes, JavaDoc, Build, HS and HS First in GameStage

--- a/src/main/resources/at/javatetris/project/Language_de.properties
+++ b/src/main/resources/at/javatetris/project/Language_de.properties
@@ -142,10 +142,11 @@ moveRight = Nach rechts
 rotate = Drehen
 pause = Pause/Play
 hold = Hold
+fromFirst = Vom 1. Platz: 
 
 keyNotSupported = Diese Taste wird nicht unterstützt!
 keyAlrExists = Du verwendest diese Taste bereits!
-clickHereToSetNewKey = Klicke hier um eine neue Taste zu setzen
+clickHereToSetNewKey = Taste zu setzen
 
 # discord rich presence
 dcStarting = Startet JavaTetris
