--- a/src/main/resources/at/javatetris/project/Language_en.properties
+++ b/src/main/resources/at/javatetris/project/Language_en.properties
@@ -141,10 +141,11 @@ moveRight = Move right
 rotate = Rotate
 pause = Pause/Play
 hold = Hold
+fromFirst = From 1. place: 
 
 keyNotSupported = This key isn't supported!
 keyAlrExists = You already use this key!
-clickHereToSetNewKey = Click here to set new key
+clickHereToSetNewKey = key
 
 # discord rich presence
 dcStarting = Starting JavaTetris
